--- a/Syntax/script_generator.ipynb
+++ b/Syntax/script_generator.ipynb
@@ -78,7 +78,6 @@
     "\t\t\t\t\t\t\t\"Golongan\",\n",
     "\t\t\t\t\t\t\t\"Subsektor\",\n",
     "\t\t\t\t\t\t\t\"Kelompok\",\n",
-    "\t\t\t\t\t\t\t\"Lampiran\",\n",
     "\t\t\t\t\t\t];\n",
     "\n",
     "\t\t\t\t\t\tfunction containsKeyword(content) {\n",
@@ -91,6 +90,14 @@
     "\t\t\t\t\t\t}\n",
     "\n",
     "\t\t\t\t\t\tif (!containsKeyword(firstCellContent)) {\n",
+    "\t\t\t\t\t\t\tvar bodyRowCount = table.bodyRowCount;\n",
+    "\t\t\t\t\t\t\tvar lastIndex = bodyRowCount - 1;\n",
+    "\t\t\t\t\t\t\tvar jmlrow = 25 - lastIndex;\n",
+    "\n",
+    "\t\t\t\t\t\t\tfor (var n = 0; n < jmlrow; n++) {\n",
+    "\t\t\t\t\t\t\t\ttable.rows.add(LocationOptions.AFTER, table.rows[lastIndex]);\n",
+    "\t\t\t\t\t\t\t\ttable.recompose();\n",
+    "\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t\tfirstCellContent = table.rows[3].cells[0].contents;\n",
     "\t\t\t\t\t\t\ttablesIndex.push({\n",
     "\t\t\t\t\t\t\t\tpage: i + 1,\n",
@@ -106,7 +113,6 @@
     "\t\t}\n",
     "\t}\n",
     "\n",
-    "\ttablesIndex.splice(13, 2);\n",
     "\talert(\"banyak tabel di indesign : \" + tablesIndex.length);\n",
     "\n",
     "\tvar dictKec = {\n",
@@ -196,7 +202,7 @@
     "\t\t3404170003: \"Glagah Harjo\",\n",
     "\t\t3404170004: \"Kepuh Harjo\",\n",
     "\t\t3404170005: \"Umbul Harjo\",\n",
-    "        kode_kecamatan: \"nama_kecamatan\"\n",
+    "\t\tkode_kecamatan: \"nama_kecamatan\",\n",
     "\t};\n",
     "\n",
     "\talert(\"banyak file : \" + excelFiles.length);\n",
@@ -317,18 +323,6 @@
     "\t}\n",
     "}\n",
     "\n",
-    "var table = app.selection[0].parentStory.tables[0];\n",
-    "\n",
-    "var bodyRowCount = table.bodyRowCount;\n",
-    "\n",
-    "var lastIndex = bodyRowCount - 1;\n",
-    "var jmlrow = 25 - lastIndex;\n",
-    "\n",
-    "for (var n = 0; n < jmlrow; n++) {\n",
-    "\ttable.rows.add(LocationOptions.AFTER, table.rows[lastIndex]);\n",
-    "\ttable.recompose();\n",
-    "}\n",
-    "\n",
     "function GetDataFromExcelPC(excelFilePath, splitChar, sheetNumber) {\n",
     "\tif (typeof splitChar === \"undefined\") var splitChar = \";\";\n",
     "\tif (typeof sheetNumber === \"undefined\") var sheetNumber = \"1\";\n",
@@ -405,6 +399,7 @@
     "}\n",
     "\n",
     "function replaceTableColumnDataFromHeader(csvData, indexTable, tables) {\n",
+    "\t// alert(\"Tabel ke-\" + indexTable);\n",
     "\t// progressInput(indexTable, tables.length);\n",
     "\tvar table = tables[indexTable].table;\n",
     "\tif (table.parent instanceof TextFrame) {\n",
@@ -420,7 +415,7 @@
     "\t}\n",
     "\tvar lastChangedRow = -1;\n",
     "\tvar searchText = csvData[0];\n",
-    "\ttable.rows[0].cells[0].contents = \"Kecamatan\\rDistrict\";\n",
+    "\t// table.rows[0].cells[0].contents = \"Desa/Kelurahan\\rVillage/Urban Village\";\n",
     "\n",
     "\t// alert(\"sekarang tabel ke - \" + indexTable);\n",
     "\tvar columnsProcessed = [];\n",
@@ -431,6 +426,7 @@
     "\t\t\tvar headers = table.rows[2].cells;\n",
     "\t\t\tfor (var j = 0; j < headers.length; j++) {\n",
     "\t\t\t\tvar headerText = headers[j].contents;\n",
+    "\t\t\t\t// alert(\"header : \" + headerText);\n",
     "\t\t\t\tfor (var k = 0; k < searchText.length; k++) {\n",
     "\t\t\t\t\t// alert(\"header : \"+ headerText);\n",
     "\t\t\t\t\t// alert(\"search : \" + searchText[k]);\n",
@@ -454,6 +450,9 @@
     "\t\t\t\t\t\t\t\t\t\t: integerPart;\n",
     "\t\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t\t\tif (cellContent === \"0\" || cellContent === \"0,00\") {\n",
+    "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
+    "\t\t\t\t\t\t\t\t}\n",
+    "\t\t\t\t\t\t\t\tif (cellContent === \"\") {\n",
     "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
     "\t\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].contents = cellContent;\n",
@@ -495,6 +494,9 @@
     "\t\t\t\t\t\t\t\tif (cellContent === \"0\" || cellContent === \"0,00\") {\n",
     "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
     "\t\t\t\t\t\t\t\t}\n",
+    "\t\t\t\t\t\t\t\tif (cellContent === \"\") {\n",
+    "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
+    "\t\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].contents = cellContent;\n",
     "\n",
     "\t\t\t\t\t\t\t\tlastChangedRow = Math.max(lastChangedRow, m);\n",
@@ -520,6 +522,7 @@
     "\t\t\t\t}\n",
     "\t\t\t}\n",
     "\t\t}\n",
+    "\t\t// alert(\"Sisa data : \" + remainingCSVData.join(\",\"));\n",
     "\t\tif (lastChangedRow !== -1) {\n",
     "\t\t\tchangeRowColor(table, lastChangedRow);\n",
     "\t\t\tremoveRowsAfter(table, lastChangedRow);\n",
@@ -635,23 +638,8 @@
     "\t};\n",
     "\tinitialDialog.show();\n",
     "}\n",
-    "// function progressInput(onProgress, Total) {\n",
-    "//   var dialog = new Window(\"dialog\", \"Progress Input\");\n",
-    "//   dialog.orientation = \"column\";\n",
-    "//   dialog.alignChildren = [\"fill\", \"top\"];\n",
-    "//   dialog.margins = 20;\n",
-    "\n",
-    "//   var messagePanel = dialog.add(\"panel\", undefined, \"Progress\");\n",
-    "//   messagePanel.orientation = \"column\";\n",
-    "//   messagePanel.alignChildren = [\"fill\", \"top\"];\n",
-    "//   messagePanel.margins = 15;\n",
-    "\n",
-    "//   messagePanel.add(\"statictext\", undefined, \"Progress Sedang di Tabel Ke-\" + onProgress + \" dari Total \" + Total + \" tabel.\");\n",
-    "\n",
-    "//   dialog.show();\n",
-    "// }\n",
-    "\n",
     "alert(\"Selesai.\");\n",
+    "\n",
     "\n",
     "'''"
    ]
@@ -670,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
