update kecamatan names and implement text replacement for "Kokap"

--- a/Syntax/script_generator.ipynb
+++ b/Syntax/script_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
     "\t\t3404170003: \"Glagah Harjo\",\n",
     "\t\t3404170004: \"Kepuh Harjo\",\n",
     "\t\t3404170005: \"Umbul Harjo\",\n",
-    "\t\tkode_kecamatan: \"nama_kecamatan\",\n",
+    "\t\tkode_kecamatan: \"Kecamatan nama_kecamatan\"\n",
     "\t};\n",
     "\n",
     "\talert(\"banyak file : \" + excelFiles.length);\n",
@@ -320,6 +320,31 @@
     "\t\t\tindexTableCSV,\n",
     "\t\t\ttablesIndex\n",
     "\t\t);\n",
+    "\t}\n",
+    "\t// Mengatur preferensi pencarian dan penggantian\n",
+    "\tapp.findTextPreferences = NothingEnum.NOTHING;\n",
+    "\tapp.changeTextPreferences = NothingEnum.NOTHING;\n",
+    "\n",
+    "\t// Melakukan penggantian teks untuk setiap pasangan find/replace\n",
+    "\tapp.findTextPreferences.findWhat = \"Kokap\";\n",
+    "\tapp.changeTextPreferences.changeTo = \"nama_kecamatan\";\n",
+    "\tdocument.changeText();\n",
+    "\n",
+    "\t// Menghapus preferensi pencarian dan penggantian setelah selesai\n",
+    "\tapp.findTextPreferences = NothingEnum.NOTHING;\n",
+    "\tapp.changeTextPreferences = NothingEnum.NOTHING;\n",
+    "\n",
+    "\t// change too in master page\n",
+    "\tvar masterPages = doc.masterSpreads;\n",
+    "\tfor (var i = 0; i < masterPages.length; i++) {\n",
+    "\t\tvar masterPage = masterPages[i];\n",
+    "\t\tvar allTextFrames = masterPage.textFrames.everyItem().getElements();\n",
+    "\t\tfor (var j = 0; j < allTextFrames.length; j++) {\n",
+    "\t\t\tvar textFrame = allTextFrames[j];\n",
+    "\t\t\tif (textFrame.contents.indexOf(\"Kokap\") !== -1) {\n",
+    "\t\t\t\ttextFrame.contents = textFrame.contents.replace(\"Kokap\", \"nama_kecamatan\");\n",
+    "\t\t\t}\n",
+    "\t\t}\n",
     "\t}\n",
     "}\n",
     "\n",
@@ -449,13 +474,25 @@
     "\t\t\t\t\t\t\t\t\t\t? integerPart + \",\" + decimalPart\n",
     "\t\t\t\t\t\t\t\t\t\t: integerPart;\n",
     "\t\t\t\t\t\t\t\t}\n",
-    "\t\t\t\t\t\t\t\tif (cellContent === \"0\" || cellContent === \"0,00\") {\n",
+    "\t\t\t\t\t\t\t\tif (\n",
+    "\t\t\t\t\t\t\t\t\tcellContent === \"0\" ||\n",
+    "\t\t\t\t\t\t\t\t\tcellContent === \"0,00\" ||\n",
+    "\t\t\t\t\t\t\t\t\tcellContent === \"\"\n",
+    "\t\t\t\t\t\t\t\t) {\n",
     "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
     "\t\t\t\t\t\t\t\t}\n",
-    "\t\t\t\t\t\t\t\tif (cellContent === \"\") {\n",
-    "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
-    "\t\t\t\t\t\t\t\t}\n",
+    "\n",
     "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].contents = cellContent;\n",
+    "\n",
+    "\t\t\t\t\t\t\t\tif (j === 0) {\n",
+    "\t\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].justification =\n",
+    "\t\t\t\t\t\t\t\t\t\tJustification.LEFT_ALIGN;\n",
+    "\t\t\t\t\t\t\t\t} else {\n",
+    "\t\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].justification =\n",
+    "\t\t\t\t\t\t\t\t\t\tJustification.CENTER_ALIGN;\n",
+    "\t\t\t\t\t\t\t\t}\n",
+    "\t\t\t\t\t\t\t\t// right indent 0\n",
+    "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].rightIndent = 0;\n",
     "\n",
     "\t\t\t\t\t\t\t\tlastChangedRow = Math.max(lastChangedRow, m);\n",
     "\t\t\t\t\t\t\t}\n",
@@ -491,13 +528,22 @@
     "\t\t\t\t\t\t\t\t\t\t? integerPart + \",\" + decimalPart\n",
     "\t\t\t\t\t\t\t\t\t\t: integerPart;\n",
     "\t\t\t\t\t\t\t\t}\n",
-    "\t\t\t\t\t\t\t\tif (cellContent === \"0\" || cellContent === \"0,00\") {\n",
-    "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
-    "\t\t\t\t\t\t\t\t}\n",
-    "\t\t\t\t\t\t\t\tif (cellContent === \"\") {\n",
+    "\t\t\t\t\t\t\t\tif (\n",
+    "\t\t\t\t\t\t\t\t\tcellContent === \"0\" ||\n",
+    "\t\t\t\t\t\t\t\t\tcellContent === \"0,00\" ||\n",
+    "\t\t\t\t\t\t\t\t\tcellContent === \"\"\n",
+    "\t\t\t\t\t\t\t\t) {\n",
     "\t\t\t\t\t\t\t\t\tcellContent = \"-\";\n",
     "\t\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].contents = cellContent;\n",
+    "\t\t\t\t\t\t\t\tif (j === 0) {\n",
+    "\t\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].justification =\n",
+    "\t\t\t\t\t\t\t\t\t\tJustification.LEFT_ALIGN;\n",
+    "\t\t\t\t\t\t\t\t} else {\n",
+    "\t\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].justification =\n",
+    "\t\t\t\t\t\t\t\t\t\tJustification.CENTER_ALIGN;\n",
+    "\t\t\t\t\t\t\t\t}\n",
+    "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].rightIndent = 0;\n",
     "\n",
     "\t\t\t\t\t\t\t\tlastChangedRow = Math.max(lastChangedRow, m);\n",
     "\t\t\t\t\t\t\t}\n",
@@ -638,6 +684,22 @@
     "\t};\n",
     "\tinitialDialog.show();\n",
     "}\n",
+    "// function progressInput(onProgress, Total) {\n",
+    "//   var dialog = new Window(\"dialog\", \"Progress Input\");\n",
+    "//   dialog.orientation = \"column\";\n",
+    "//   dialog.alignChildren = [\"fill\", \"top\"];\n",
+    "//   dialog.margins = 20;\n",
+    "\n",
+    "//   var messagePanel = dialog.add(\"panel\", undefined, \"Progress\");\n",
+    "//   messagePanel.orientation = \"column\";\n",
+    "//   messagePanel.alignChildren = [\"fill\", \"top\"];\n",
+    "//   messagePanel.margins = 15;\n",
+    "\n",
+    "//   messagePanel.add(\"statictext\", undefined, \"Progress Sedang di Tabel Ke-\" + onProgress + \" dari Total \" + Total + \" tabel.\");\n",
+    "\n",
+    "//   dialog.show();\n",
+    "// }\n",
+    "\n",
     "alert(\"Selesai.\");\n",
     "\n",
     "\n",
@@ -646,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
