update scriopt and README

--- a/Data/filter.ipynb
+++ b/Data/filter.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Script untuk melakukan filter data yang diperlukan untuk publikasi ST2023 Tahap 2 Tiap Kecamatan di Kabupaten Sleman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Library"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,13 +27,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define Kabupatan Yang Akan Dibuatkan Publikasi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# kabupaten yang mau difilter\n",
     "kabupaten = 3404"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function untuk filter data yang diperlukan"
    ]
   },
   {
@@ -31,25 +58,19 @@
     "# Fungsi untuk memfilter data kabupaten\n",
     "def filter_kab(path: pathlib.Path, output_dir: pathlib.Path) -> None:\n",
     "    try:\n",
-    "        # nama_sheet_kec = get name sheet that include 'kec'\n",
-    "        # nama_sheet_desa = get name sheet that include 'desa'\n",
-    "        try:\n",
-    "            excel_file = pd.ExcelFile(path)\n",
-    "            sheet_names = excel_file.sheet_names\n",
+    "        excel_file = pd.ExcelFile(path)\n",
+    "        sheet_names = excel_file.sheet_names\n",
     "\n",
-    "            # Find the sheets that include 'kec' and 'desa'\n",
-    "            nama_sheet_kec = next(sheet for sheet in sheet_names if 'kec' in sheet.lower())\n",
-    "            nama_sheet_desa = next(sheet for sheet in sheet_names if 'desa' in sheet.lower())\n",
+    "        # Find the sheets that include 'kec' and 'desa'\n",
+    "        nama_sheet_kec = next(sheet for sheet in sheet_names if 'kec' in sheet.lower())\n",
+    "        nama_sheet_desa = next(sheet for sheet in sheet_names if 'desa' in sheet.lower())\n",
     "\n",
-    "            # Read the specified sheets\n",
-    "            df1 = pd.read_excel(excel_file, sheet_name=nama_sheet_kec)\n",
-    "            df2 = pd.read_excel(excel_file, sheet_name=nama_sheet_desa)\n",
-    "        except Exception as e:\n",
-    "            print(f'Error reading {path}: {e}')\n",
-    "            return\n",
+    "        # Read the specified sheets\n",
+    "        df1 = pd.read_excel(excel_file, sheet_name=nama_sheet_kec)\n",
+    "        df2 = pd.read_excel(excel_file, sheet_name=nama_sheet_desa)\n",
+    "\n",
     "        \n",
-    "\n",
-    "        # Filter DataFrames\n",
+    "        # Filter DataFrames sesuai kabupaten\n",
     "        df1 = df1[df1['kab'] == kabupaten]\n",
     "        df2 = df2[df2['kab'] == kabupaten]\n",
     "\n",
@@ -61,6 +82,7 @@
     "            df1.to_excel(writer, sheet_name='Kecamatan', index=False)\n",
     "            df2.to_excel(writer, sheet_name='Desa', index=False)\n",
     "        print(f'Finished processing {path}')\n",
+    "        \n",
     "    except Exception as e:\n",
     "        print(f'Error processing {path}: {e}')"
    ]
