--- a/Syntax/script_generator.ipynb
+++ b/Syntax/script_generator.ipynb
@@ -113,7 +113,7 @@
     "\t\t}\n",
     "\t}\n",
     "\n",
-    "\talert(\"banyak tabel di indesign : \" + tablesIndex.length);\n",
+    "\t// alert(\"banyak tabel di indesign : \" + tablesIndex.length);\n",
     "\n",
     "\tvar dictKec = {\n",
     "\t\t3404010001: \"Sumberrahayu\",\n",
@@ -205,7 +205,35 @@
     "\t\tkode_kecamatan: \"Kecamatan nama_kecamatan\"\n",
     "\t};\n",
     "\n",
-    "\talert(\"banyak file : \" + excelFiles.length);\n",
+    "\t// Mengatur preferensi pencarian dan penggantian\n",
+    "\tapp.findTextPreferences = NothingEnum.NOTHING;\n",
+    "\tapp.changeTextPreferences = NothingEnum.NOTHING;\n",
+    "\n",
+    "\t// Melakukan penggantian teks untuk setiap pasangan find/replace\n",
+    "\tapp.findTextPreferences.findWhat = \"Kokap\";\n",
+    "\tapp.changeTextPreferences.changeTo = \"nama_kecamatan\";\n",
+    "\tdocument.changeText();\n",
+    "\n",
+    "\t// Menghapus preferensi pencarian dan penggantian setelah selesai\n",
+    "\tapp.findTextPreferences = NothingEnum.NOTHING;\n",
+    "\tapp.changeTextPreferences = NothingEnum.NOTHING;\n",
+    "\n",
+    "\t// change too in master page\n",
+    "\tvar masterPages = doc.masterSpreads;\n",
+    "\t// change kokap to nama_kecamatan in master page\n",
+    "\tfor (var i = 0; i < masterPages.length; i++) {\n",
+    "\t\tvar masterPage = masterPages[i];\n",
+    "\t\tvar allTextFrames = masterPage.textFrames.everyItem().getElements();\n",
+    "\t\tfor (var j = 0; j < allTextFrames.length; j++) {\n",
+    "\t\t\tvar textFrame = allTextFrames[j];\n",
+    "\t\t\t// if in textFrame include \"Kokap\" then change to \"nama_kecamatan\"\n",
+    "\t\t\tif (textFrame.contents.indexOf(\"Kokap\") !== -1) {\n",
+    "\t\t\t\ttextFrame.contents = textFrame.contents.replace(\"Kokap\", \"nama_kecamatan\");\n",
+    "\t\t\t}\n",
+    "\t\t}\n",
+    "\t}\n",
+    "\n",
+    "\t// alert(\"banyak file : \" + excelFiles.length);\n",
     "\tfor (var i = 0; i < excelFiles.length; i++) {\n",
     "\t\tvar filePath = excelFiles[i].fsName;\n",
     "\t\t// alert(filePath);\n",
@@ -271,7 +299,7 @@
     "\n",
     "\t\tvar filteredData = [];\n",
     "\t\tfor (var m = 1; m < data.length; m++) {\n",
-    "\t\t\tif (data[m][kabIndex] === \"kode_kecamatan\") {\n",
+    "\t\t\tif (data[m][kabIndex] === \"3404040\") {\n",
     "\t\t\t\tfilteredData.push(data[m]);\n",
     "\t\t\t}\n",
     "\t\t}\n",
@@ -290,7 +318,7 @@
     "\n",
     "\t\tvar filteredTotal = [];\n",
     "\t\tfor (var p = 1; p < total.length; p++) {\n",
-    "\t\t\tif (total[p][totalIndex] === \"kode_kecamatan\") {\n",
+    "\t\t\tif (total[p][totalIndex] === \"3404040\") {\n",
     "\t\t\t\tfilteredTotal.push(total[p]);\n",
     "\t\t\t}\n",
     "\t\t}\n",
@@ -320,31 +348,6 @@
     "\t\t\tindexTableCSV,\n",
     "\t\t\ttablesIndex\n",
     "\t\t);\n",
-    "\t}\n",
-    "\t// Mengatur preferensi pencarian dan penggantian\n",
-    "\tapp.findTextPreferences = NothingEnum.NOTHING;\n",
-    "\tapp.changeTextPreferences = NothingEnum.NOTHING;\n",
-    "\n",
-    "\t// Melakukan penggantian teks untuk setiap pasangan find/replace\n",
-    "\tapp.findTextPreferences.findWhat = \"Kokap\";\n",
-    "\tapp.changeTextPreferences.changeTo = \"nama_kecamatan\";\n",
-    "\tdocument.changeText();\n",
-    "\n",
-    "\t// Menghapus preferensi pencarian dan penggantian setelah selesai\n",
-    "\tapp.findTextPreferences = NothingEnum.NOTHING;\n",
-    "\tapp.changeTextPreferences = NothingEnum.NOTHING;\n",
-    "\n",
-    "\t// change too in master page\n",
-    "\tvar masterPages = doc.masterSpreads;\n",
-    "\tfor (var i = 0; i < masterPages.length; i++) {\n",
-    "\t\tvar masterPage = masterPages[i];\n",
-    "\t\tvar allTextFrames = masterPage.textFrames.everyItem().getElements();\n",
-    "\t\tfor (var j = 0; j < allTextFrames.length; j++) {\n",
-    "\t\t\tvar textFrame = allTextFrames[j];\n",
-    "\t\t\tif (textFrame.contents.indexOf(\"Kokap\") !== -1) {\n",
-    "\t\t\t\ttextFrame.contents = textFrame.contents.replace(\"Kokap\", \"nama_kecamatan\");\n",
-    "\t\t\t}\n",
-    "\t\t}\n",
     "\t}\n",
     "}\n",
     "\n",
@@ -493,6 +496,8 @@
     "\t\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t\t\t// right indent 0\n",
     "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].rightIndent = 0;\n",
+    "\t\t\t\t\t\t\t\t// set last line right indent 0\n",
+    "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].lastLineIndent = 0;\n",
     "\n",
     "\t\t\t\t\t\t\t\tlastChangedRow = Math.max(lastChangedRow, m);\n",
     "\t\t\t\t\t\t\t}\n",
@@ -544,6 +549,7 @@
     "\t\t\t\t\t\t\t\t\t\tJustification.CENTER_ALIGN;\n",
     "\t\t\t\t\t\t\t\t}\n",
     "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].rightIndent = 0;\n",
+    "\t\t\t\t\t\t\t\ttable.rows[m].cells[j].paragraphs[0].lastLineIndent = 0;\n",
     "\n",
     "\t\t\t\t\t\t\t\tlastChangedRow = Math.max(lastChangedRow, m);\n",
     "\t\t\t\t\t\t\t}\n",
