--- a/Syntax/script_generator.ipynb
+++ b/Syntax/script_generator.ipynb
@@ -299,7 +299,7 @@
     "\n",
     "\t\tvar filteredData = [];\n",
     "\t\tfor (var m = 1; m < data.length; m++) {\n",
-    "\t\t\tif (data[m][kabIndex] === \"3404040\") {\n",
+    "\t\t\tif (data[m][kabIndex] === \"kode_kecamatan\") {\n",
     "\t\t\t\tfilteredData.push(data[m]);\n",
     "\t\t\t}\n",
     "\t\t}\n",
@@ -318,7 +318,7 @@
     "\n",
     "\t\tvar filteredTotal = [];\n",
     "\t\tfor (var p = 1; p < total.length; p++) {\n",
-    "\t\t\tif (total[p][totalIndex] === \"3404040\") {\n",
+    "\t\t\tif (total[p][totalIndex] === \"kode_kecamatan\") {\n",
     "\t\t\t\tfilteredTotal.push(total[p]);\n",
     "\t\t\t}\n",
     "\t\t}\n",
